`text-muted` fix in dark mode

--- a/src/scss/layout/_dark.scss
+++ b/src/scss/layout/_dark.scss
@@ -14,6 +14,7 @@ body:not(.theme-dark) .hide-theme-light {
   & {
     --#{$prefix}body-color: #{$dark-mode-text};
     --#{$prefix}body-color-rgb: #{to-rgb($dark-mode-text)};
+    --#{$prefix}muted: rgba(153, 159, 164, 1);
 
     --#{$prefix}body-bg: #{$dark-mode-darken};
     --#{$prefix}body-bg-rgb: #{to-rgb($dark-mode-darken)};
